took me 5 hours(getting better)
ggg

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
 <body>
     <div class="container"> 
         <a href="#" class="btn btn-teal">Click Me!</a>
+        <img src="media/auto-cadillac-oldtimer-classic-163553.jpg" alt="" class="caddilac">
+        <div class="text-effect">Star wars</div>
+        <div class="candy-parent">
+            <div class="candy-gallery">
+            <img src="media/gold-bear-gummi-bears-bear-yellow-55825.jpg" alt="" class="candy-photo candy-photo-1"/>
+            <img src="media/pexels-photo-1174114.webp" alt="" class="candy-photo candy-photo-2"/>
+            <img src="media/pexels-photo-4202998.webp" alt="" class="candy-photo candy-photo-3"/>
+            </div>
+        </div>
+        <div class="applewatch">
+            <img src="./media/pexels-photo-876466.webp" alt="" class="applewatch-picture" />
+            <h1 class="applewatch-header">adventure awaits</h1>
+        </div>
     </div>
 </body>
 </html>
